# captcha_race

./: CLAUDE.md  README.md  captcha_race.opam  dune-project
app/src/: app_state.ml  app_state.mli  button.ml  button.mli  captcha_race_app.ml  captcha_race_app.mli  click_ripple.ml  click_ripple.mli  dune  pixel_font.mli  render.ml
app/test/: dune  test_app_state.ml  test_button.ml  test_click_ripple.ml  test_pixel_font.ml
engine/src/: captcha_race_engine.ml  captcha_race_engine.mli  dune  game_runner.mli  layout.ml  layout.mli  leaderboard.mli  mini_game.ml  mini_game.mli  mini_game_intf.ml  pixel_font.ml
engine/test/: dune  test_game_runner.ml  test_leaderboard.ml  test_pixel_font.ml
lib/captcha_race/src/: app_state.ml  app_state.mli  button.ml  button.mli  captcha_race.ml  captcha_race.mli  click_ripple.ml  click_ripple.mli  dune  game_runner.ml  game_runner.mli  geometry.mli  input.mli  leaderboard.ml  leaderboard.mli  math_game.ml  math_game.mli  mini_game.ml  mini_game.mli  mini_game_intf.ml  placeholder_game.ml  placeholder_game.mli  render.ml  render.mli
lib/src/: captcha_race.ml  captcha_race.mli  dune  geometry.ml  geometry.mli  input.ml  input.mli
lib/test/: dune  test_geometry.ml
mini_games/src/: captcha_race_mini_games.ml  captcha_race_mini_games.mli  dune  math_game.ml  math_game.mli  moving_puzzle.ml  moving_puzzle.mli  placeholder_game.ml  placeholder_game.mli  typing_game.ml  typing_game.mli
mini_games/test/: dune  test_math_game.ml  test_moving_puzzle.ml  test_placeholder_game.ml  test_typing_game.ml
scratch_shot/: dune  shot.ml
(+8 files in other folders)
